TEST_PROGRAMS/VALID/armin_taheri/valid1.min
var first: string;
var last: string; 
var isMarried: int; #0 if not married, not 0  if married.

first = "Potato";
last = "Head";
isMarried = 1;

if isMarried then
	print "Mrs. ";
else
	print "Ms. ";
endif

print first;
print last;

