TEST_PROGRAMS/INVALID/david_rapoport/invalid3.min
# no "then" for if statement"
var x: float;

if 5 
 x = 0.54
else
 x = 100.23
endif
